# crash-handler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  package.json
.github/workflows/: build.yml  clang-format.yml
ci/: build-aws-sdk.cmd  build-osx.sh  bump-version.js  check-format.sh  copy-dependencies.cmd  generate_new_translations.cmd  install-bin-deps.cmd  install-zlib.cmd  localization_get_tools.cmd  localization_prepare_binaries.cmd  localization_prepare_binaries_osx.sh  localization_set_translations.cmd  s3upload.ps1  symbols.cmd  symbols.ps1
ci/appveyor/: sign_binaries.ps1
ci/macos-deps/: create-gettext-package.zsh
cmake/: FindZLIB.cmake  FindZLIB_Bin.cmake
crash-handler-module/: CMakeLists.txt  main.js  module.cpp  package.json
crash-handler-module/dependencies/: crash-handler.node.txt
crash-handler-process/: CMakeLists.txt  brief-crash-info-uploader.cpp  brief-crash-info-uploader.hpp  crashpadprovider.cpp  crashpadprovider.hpp  http-helper.hpp  logger.cpp  logger.hpp  main.cpp  message.cpp  message.hpp  metricsprovider.cpp  metricsprovider.hpp  namedsocket-win.cpp  namedsocket-win.hpp  namedsocket.cpp  namedsocket.hpp  process-manager.cpp  process-manager.hpp  process.cpp  process.hpp  socket.hpp  util.hpp
crash-handler-process/dependencies/: crash-handler-process.exe.txt
crash-handler-process/locale/ar_SA/LC_MESSAGES/: messages.po
crash-handler-process/locale/cs_CZ/LC_MESSAGES/: messages.po
crash-handler-process/locale/da_DK/LC_MESSAGES/: messages.po
crash-handler-process/locale/de_DE/LC_MESSAGES/: messages.po
crash-handler-process/locale/en_US/LC_MESSAGES/: messages.po
crash-handler-process/locale/es_ES/LC_MESSAGES/: messages.po
crash-handler-process/locale/fr_FR/LC_MESSAGES/: messages.po
crash-handler-process/locale/hu_HU/LC_MESSAGES/: messages.po
crash-handler-process/locale/id_ID/LC_MESSAGES/: messages.po
crash-handler-process/locale/it_IT/LC_MESSAGES/: messages.po
crash-handler-process/locale/ja_JP/LC_MESSAGES/: messages.po
crash-handler-process/locale/ko_KR/LC_MESSAGES/: messages.po
crash-handler-process/locale/mk_MK/LC_MESSAGES/: messages.po
crash-handler-process/locale/nl_NL/LC_MESSAGES/: messages.po
crash-handler-process/locale/pl_PL/LC_MESSAGES/: messages.po
crash-handler-process/locale/pt_BR/LC_MESSAGES/: messages.po
crash-handler-process/locale/pt_PT/LC_MESSAGES/: messages.po
crash-handler-process/locale/ru_RU/LC_MESSAGES/: messages.po
crash-handler-process/locale/sk_SK/LC_MESSAGES/: messages.po
crash-handler-process/locale/sl_SI/LC_MESSAGES/: messages.po
crash-handler-process/locale/sv_SE/LC_MESSAGES/: messages.po
crash-handler-process/locale/th_TH/LC_MESSAGES/: messages.po
crash-handler-process/locale/tr_TR/LC_MESSAGES/: messages.po
crash-handler-process/locale/vi_VN/LC_MESSAGES/: messages.po
crash-handler-process/locale/zh_CN/LC_MESSAGES/: messages.po
crash-handler-process/locale/zh_TW/LC_MESSAGES/: messages.po
crash-handler-process/minizip/: ioapi.c  ioapi.h  iowin32.c  zip.c  zip.h
source/: main.cpp  message.cpp  message.hpp  namedsocket-win.cpp  namedsocket-win.hpp  namedsocket.hpp  process.cpp  process.hpp
